# borderlint

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RESUME.md  action.yml  pyproject.toml  workflow.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: spec-reviewer.md  task-reviewer.md
.claude/commands/: git-commit.md  next.md  opsx-apply.md  opsx-verify.md  pr-open.md  req-capture.md  review-change.md  review-task.md  ship.md  start.md  task-enrich.md  task-generate.md  task-import.md  task-jira.md  task-new.md
.github/workflows/: ci.yml  kb-refresh.yml  pages.yml  release.yml
.opsx/: manifest.json
backlog/: README.md
backlog/discovery/: gba-governance-roadmap.md  home-locations-research.md
borderlint/: __init__.py  cli.py  detect.py  init.py  kb.py  policy.py  report.py
borderlint/data/: arrangements.json  evidence_regimes.json  provenance.json  providers.json  regimes.json  sovereignty.json
examples/: internal-endpoints.json  internal_service.yaml  residency.json  sample_app.py  sample_config.yaml
examples/ci/: Jenkinsfile  github-actions.yml
examples/gba-resident-app/: dataflow.mmd  internal-endpoints.json  package.json  residency-hk.json  residency-mo.json
integrations/: claude-code-skill.md  claude-code.md  cursor.mdc
openspec/: config.yaml
scripts/: kb_drift.py  kb_drift_aliases.json  kb_site.py  opsx-init.sh
templates/: discovery.md  pr-description.md  task.md
tests/: test_borderlint.py
(+285 files in other folders)
