[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "borderlint"
version = "1.11.0"
description = "Map and govern where your AI data flows — and who can compel its disclosure."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Iolaire McKinnon" }]
keywords = ["ai", "governance", "data-residency", "sovereignty", "llm", "compliance"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
borderlint = "borderlint.cli:main"

[tool.hatch.build.targets.wheel]
include = ["borderlint"]
